wip - fix footer dark mode

--- a/frontend/tchap/css/tchap.css
+++ b/frontend/tchap/css/tchap.css
@@ -137,3 +137,17 @@ footer {
     gap: 1rem !important;
   }
 }
+
+/* fix footer dark mode */ 
+.fr-footer {
+  /* background-color: var(--background-default-grey); */
+  background: inherit;
+  color: inherit;
+}
+
+:where(.lasuite) .fr-logo {
+ background: inherit;
+  color: inherit;
+}
+
+/* end fix footer dark mode */ 
